Fixing chat going offscreen if too many people log in (~22-23 people)

--- a/gemp-lotr/gemp-lotr-async/src/main/web/css/gemp-001/hall.css
+++ b/gemp-lotr/gemp-lotr-async/src/main/web/css/gemp-001/hall.css
@@ -202,11 +202,12 @@ tr.played {
 #userListColumn {
     display: flex;
     flex-direction: column;
+    overflow: auto;
 }
 
 #userList {
     flex-grow: 1;
-    overflow: auto;
+    overflow: scroll;
 }
 
 #toggleChatButt {
